# OMR-Scanner

./: package.json
android/app/: build.gradle
backend/: pyproject.toml  requirements.txt
backend/src/: main.py
ios/qr/: Info.plist
ios/qr.xcodeproj/: project.pbxproj
mobil/: package-lock.json  package.json
mobil/android/app/: build.gradle
mobil/android/app/src/main/java/com/armgx/omrscanner/: MainActivity.kt  MainApplication.kt
mobil/ios/qr/: Info.plist
mobil/ios/qr.xcodeproj/: project.pbxproj
mobil/src/api/: omrApi.ts
mobil/src/navigation/: AppNavigator.tsx
mobil/src/screens/: ExamConfigScreen.tsx  GroupDetailScreen.tsx  GroupsScreen.tsx  ResultDetailScreen.tsx  ScanResultScreen.tsx
mobil/src/store/: useStore.ts
mobil/src/types/: index.ts
